# mini-java

./: .gitignore  CMakeLists.txt  README.md  a.mj  annotations.txt  b.mj  c.mj  d.mj  parser.cpp  parser.h  principal.cpp  scanner.cpp  scanner.h  stentry.h  symboltable.cpp  symboltable.h  token.h
.github/workflows/: c-cpp.yml
